--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -9,7 +9,7 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script type="text/javascript" src="{{ asset_url_for('styles.js') }}" charset="utf-8"></script>
+    <link rel="stylesheet" href="{{ asset_url_for('styles.css') }}">
   </head>
   <body class="h-100">
     <form class="h-100" name="login_user_form" action="{{ url_for_security('login') }}" method="POST" accept-charset="utf-8" autocomplete="off" autocorrect="off" autocapitalize="off">
