fix: fixes version number and name

--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -33,7 +33,7 @@
                   </div>
                 </section>
               </div>
-              <div class="card-footer text-muted text-right"><small>Apollo 3.0</small></div>
+              <div class="card-footer text-muted text-right"><small>{{ config.VERSION }}</small></div>
             </div>
           </div><input type="hidden" name="{{ login_user_form.next.name }}" id="{{ login_user_form.next.id }}" value="{{ login_user_form.next.value }}">
         </div>
