--- a/apollo/process_analysis/templates/process_analysis/critical_incidents_locations.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incidents_locations.html
@@ -27,7 +27,7 @@
         <div class="tab-pane active" id="table">
           <table class="table table-bordered table-striped">
             <tr>
-              <td colspan="{{ 5 + location_types.count() }}"><strong>{{ form_field['tag'] }}</strong> &middot; {{ form_field['description'] }}</td>
+              <td colspan="{{ 5 + location_types.count() }}"><strong>{{ form_field.tag }}</strong> &middot; {{ form_field.description }}</td>
             </tr>
             <tr>
               <th>{{ _('Observer ID') }}</th>
