--- a/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
@@ -75,7 +75,7 @@
 							<table width="100%" class="table table-striped table-bordered">
 								<tr>
 									<td width="30" rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><strong>{{ field.tag }}</strong></td>
-									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.id, location_id=location.id, tag=field.tag) }}">{{ field['description'] }}</a></td>
+									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.id, location_id=location.id, tag=field.tag) }}">{{ field.description }}</a></td>
 									<td>&nbsp;</td>
 									{% if stats.type == 'continuous' %}
 									<td bgcolor="#eee">{{ _('Mean') }}</td>
