fix: update templates for password recovery

--- a/apollo/frontend/templates/frontend/forgot_password.html
+++ b/apollo/frontend/templates/frontend/forgot_password.html
@@ -1,42 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="h-100">
 <head>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{{ _('Account recovery') }}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-{% assets 'apollo_css' %}
-<link rel="stylesheet" type="text/css" media="screen" href="{{ ASSET_URL }}" />
-{% endassets %}
+    <meta charset="utf-8">
+    <title>{{ _('Password Reset') }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/ico" href="{{ url_for('static', filename='ico/favicon.ico') }}">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+            <![endif]-->
+    <link rel="stylesheet" href="{{ asset_url_for('styles.css') }}">
 </head>
-<body>
-<div class="container">
-<div class="row" style="padding-top: 70px;">
-<div class="col-md-4 col-md-offset-4">
-<div class="panel panel-default">
-<div class="panel-heading">{{ _('Account recovery') }}</div>
-<div class="panel-body">
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-{% for msg in messages %}
-<div class="alert alert-info">{{ msg }}</div>
-{% endfor %}
-{% endif %}
-{% endwith %}
-<form action="{{ url_for_security('forgot_password') }}" method="post" name="forgot_password_form">
-{{ forgot_password_form.hidden_tag() }}
-<div class="form-group">
-<div class="input-group">
-<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-<input type="email" name="email" id="email" class="form-control" placeholder="{{ _('Email') }}">
-</div>
-</div>
-<div class="form-group"><button type="submit" class="btn btn-primary btn-block">{{ _('Reset Password') }}</button></div>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
+<body class="h-100">
+    <form class="h-100" name="forgot_password_form" action="{{ url_for_security('forgot_password') }}" method="POST"
+        accept-charset="utf-8" autocomplete="off" autocorrect="off" autocapitalize="off">
+        {{ forgot_password_form.hidden_tag() }}
+        <div class="container h-100">
+            <div class="row h-75 align-items-center">
+                <div class="col-md-6 col-lg-4 offset-md-3 offset-lg-4">
+                    {%- with messages = get_flashed_messages(with_categories=true) -%}
+                    {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-info">
+                        {{ message }}
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {%- endwith %}
+                    <div class="card">
+                        <div class="card-header">
+                            {{ _('Password Reset') }}
+                        </div>
+                        <div class="card-body">{% if forgot_password_form.errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ _('An error occured while attempting to reset the password for the supplied account.
+                                Please check the email address and try again.') }}
+                            </div>{% endif %}
+                            <section>
+                                <label class="sr-only" for="{{ forgot_password_form.email.id }}">{{ _('Email') }}</label>
+                                <input class="form-control mb-3 bg-light" id="{{ forgot_password_form.email.id }}" name="{{ forgot_password_form.email.name }}"
+                                    type="text" placeholder="{{ _('Email') }}" autofocus>
+                                <div class="row d-flex align-items-center px-3">
+                                    <button type="submit" class="btn btn-primary btn-block col-7">{{ _('Reset Password') }}</button>
+                                    <div class="col-5 text-right"><a href="{{ url_for_security('login') }}" class="text-decoration-none">{{
+                                            _('Cancel') }}</a></div>
+                                </div>
+                            </section>
+                        </div>
+                        <div class="card-footer text-muted text-right"><small>{{ config.VERSION }}</small></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+    <script type="text/javascript" src="{{ asset_url_for('scripts.js') }}" charset="utf-8"></script>
 </body>
 </html>
