--- a/apollo/frontend/templates/frontend/formbuilder.html
+++ b/apollo/frontend/templates/frontend/formbuilder.html
@@ -7,6 +7,14 @@
 <a href="{{ url_for('forms.list_forms') }}">{{ form.form_set.name }}</a>{% endif %}
 {% endblock subtitle %}
 {% block content %}
+<style>
+  .form-group {
+    margin-bottom: 0
+  }
+  .panel {
+    margin-bottom: 0
+  }
+</style>
 <div ng-app="app">
   <div class="row" id="formbuilder" ng-controller="BuilderController" data-form='{{ form_data|tojson }}' data-csrf="{{ csrf_token() }}">
     <div class="col-md-6" style="margin-bottom:8em;">
@@ -19,9 +27,6 @@
     </div>
     <div class="col-md-6" style="position:fixed; margin-left:45%; width:45%;">
       <div class="panel panel-default" style="margin-bottom:2.5em;">
-        <div class="panel-heading">
-          <h3 class="panel-title">Form Components</h3>
-        </div>
         <div class="panel-body">
           <div fb-components></div>
           <button class="btn btn-primary" ng-click="submit();"><span class="glyphicon glyphicon-save"></span> Save</button>
