fix: resolves issue with navigation on dashboard
fixes an issue with not being able to navigate with
different admin divisions on the dashboard.

fixes #141

--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -61,7 +61,7 @@
 {% if loop.index0 is divisibleby 6 %}<div class="row">{% endif %}
   <div class="col-md-2">
   {%- if group -%}
-    <legend class="centered">{% if next_location %}<a href="{{ url_for('dashboard.checklists', form_id=form_id, group=group, locationtype=locationtype, location=row.get('id', ''), **args) }}">{% endif %}{{ row.name }}{% if next_location %}</a>{% endif %}</legend>
+    <legend class="centered">{% if next_location %}<a href="{{ url_for('dashboard.checklists', form_id=form_id, group=group.slug, locationtype=locationtype, location=row.get('id', ''), **args) }}">{% endif %}{{ row.name }}{% if next_location %}</a>{% endif %}</legend>
   {%- else -%}
     <legend style="text-align:center">{% if not location %}<a href="{{ url_for('dashboard.checklists', form_id=form_id, group=row.slug, locationtype=locationtype, **args) }}">{% endif %}{{ row.name }}{% if not location %}</a>{% endif %}</legend>
   {% endif %}
