--- a/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
@@ -30,16 +30,17 @@
 					<table class="table table-bordered table-striped">
 						<tr>
 							<th width="250">{{ _('Location') }}</th>
-							<th width="100" style="text-align:center">N</th>
+							<th colspan="2" width="100" style="text-align:center"></th>
 							{% for tag, tag_description, tag_stats in incidents_summary.top %}
-							<th width="100" style="text-align: center"><abbr title="{{ tag_description }}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.id, location_id=location.id, tag=tag) }}">{{ tag }}</a></abbr></th>
+							<th colspan="2" width="100" style="text-align: center"><abbr title="{{ tag_description }}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.id, location_id=location.id, tag=tag) }}">{{ tag }}</a></abbr></th>
 							{% endfor %}
 						</tr>
 						<tr>
 							<th>{{ location.name }}</th>
-							<th style="text-align:center">{{ incidents_summary.top[0][2].total }}</th>
+							<th colspan="2" style="text-align:center">{{ incidents_summary.top[0][2].total }}</th>
 							{% for tag, description, tag_stats in incidents_summary.top %}
-							<th style="text-align:center">{{ tag_stats.percent_reported|round|int }}%<br>({{ tag_stats.reported }})</th>
+							<th style="text-align:center">{{ tag_stats.percent_reported|round|int }}%</th>
+							<th style="text-align:center">{{ tag_stats.reported }}</th>
 							{% endfor %}
 						</tr>
 						{% for location_type, group_location_stats in incidents_summary.groups %}
@@ -49,14 +50,18 @@
 							{% set tag_data = incidents_summary.top[0] %}
 							{% if location_data %}
 							{% set field_stats = location_data[tag_data[0]] %}
-							<td style="text-align:center">{{ field_stats.1.total|percent_of(incidents_summary.top.0.2.total)|round|int }}%<br>({{ field_stats.1.total }})</td>
+							<td style="text-align:center">{{ field_stats.1.total|percent_of(incidents_summary.top.0.2.total)|round|int }}%</td>
+							<td style="text-align:center">{{ field_stats.1.total }}</td>
 							{% else %}
-							<td style="text-align:center">0%</td>
+							<td colspan="2" style="text-align:center">0%</td>
 							{% endif %}
 							{% for tag, tag_description, temp in incidents_summary.top %}
 							{% if location_data %}
 							{% set field_stats = location_data[tag] %}
-							<td style="text-align:center">{{ field_stats[1].percent_reported|round|int }}%<br>({{ field_stats[1].reported }})</td>
+							<td style="text-align:center">{{ field_stats[1].percent_reported|round|int }}%</td>
+							<td style="text-align:center">{{ field_stats[1].reported }}</td>
+							{% else %}
+							<td colspan="2"></td>
 							{% endif %}
 							{% endfor %}
 						</tr>
@@ -81,11 +86,11 @@
 									<td bgcolor="#eee">{{ _('Mean') }}</td>
 									{% else %}
 									{% for label, unused in stats.options|dictsort(false, 'value') %}
-									<td>{{ _('%(label)s', label=label) }}</td>
+									<td colspan="2">{{ _('%(label)s', label=label) }}</td>
 									{% endfor %}
 									{% endif %}
-									<td width="100" bgcolor="#eee">{{ _('Reported') }}</td>
-									<td width="100" bgcolor="#eee">{{ _('Missing') }}</td>
+									<td colspan="2" width="100" bgcolor="#eee">{{ _('Reported') }}</td>
+									<td colspan="2" width="100" bgcolor="#eee">{{ _('Missing') }}</td>
 								</tr>
 								<tr>
 									<td class="text-centered"><strong>{{ _('All') }}</strong></td>
@@ -93,11 +98,14 @@
 									<td><strong>{{ stats.mean|mean_filter }}</strong></td>
 									{% else %}
 									{% for opt, option in stats.options|dictsort(false, 'value') %}
-									<td><strong>{{ stats.value_counts[option]|default(0)|percent_of(stats.value_counts_sum)|round|int }}% ({{ stats.value_counts[option]|default(0) }})</strong></td>
+									<td><strong>{{ stats.value_counts[option]|default(0)|percent_of(stats.value_counts_sum)|round|int }}%</strong></td>
+									<td><strong>{{ stats.value_counts[option]|default(0) }}</strong></td>
 									{% endfor %}
 									{% endif %}
-									<td><strong>{{ stats.count|percent_of(stats.size)|round|int }}% ({{ stats.count }}) </strong></td>
-									<td><strong>{{ stats.diff|percent_of(stats.size)|round|int }}% ({{ stats.diff }}) </strong></td>
+									<td><strong>{{ stats.count|percent_of(stats.size)|round|int }}%</strong></td>
+									<td><strong>{{ stats.count }}</strong></td>
+									<td><strong>{{ stats.diff|percent_of(stats.size)|round|int }}%</strong></td>
+									<td><strong>{{ stats.diff }}</strong></td>
 								</tr>
 								{% for group in stats.urban %}
 								<tr>
