feat: add option value in process data summaries
see #218

--- a/apollo/process_analysis/templates/process_analysis/checklist_summary.html
+++ b/apollo/process_analysis/templates/process_analysis/checklist_summary.html
@@ -33,8 +33,8 @@
 							{% if stats.type == 'continuous' %}
 							<td bgcolor="#eee">{{ _('Mean') }}</td>
 							{% else %}
-							{% for label, unused in stats.options|dictsort(false, 'value') %}
-							<td>{{ _('%(label)s', label=label) }}</td>
+							{% for label, value in stats.options|dictsort(false, 'value') %}
+							<td>{{ _('%(label)s', label=label) }} ({{ value }})</td>
 							{% endfor %}
 							{% endif %}
 							<td width="100" bgcolor="#eee">{{ _('Reported') }}</td>
