--- a/apollo/frontend/templates/frontend/formbuilder.html
+++ b/apollo/frontend/templates/frontend/formbuilder.html
@@ -2,10 +2,6 @@
 {% block stylesheets %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/angular-form-builder.css') }}">
 {% endblock %}
-{% block subtitle %}{% if form_set_id %}
-<a href="{{ url_for('forms.list_forms_with_set', form_set_id=form_set_id) }}">{{ form.form_set.name }}</a>{% else %}
-<a href="{{ url_for('forms.list_forms') }}">{{ form.form_set.name }}</a>{% endif %}
-{% endblock subtitle %}
 {% block content %}
 <style>
   .form-group {
@@ -30,7 +26,7 @@
         <div class="panel-body">
           <div fb-components></div>
           <button class="btn btn-primary" ng-click="submit();"><span class="glyphicon glyphicon-save"></span> Save</button>
-          <a href="{% if form_set_id %}{{ url_for('forms.list_forms_with_set', form_set_id=form.form_set_id) }}{% else %}{{ url_for('forms.list_forms') }}{% endif %}" class="btn btn-default">Cancel</a>
+          <a href="{{ url_for('forms.list_forms') }}" class="btn btn-default">Cancel</a>
         </div>
       </div>
     </div>
@@ -76,7 +72,7 @@
             },
             type: 'POST',
           });
-          window.location.href = "{% if form_set_id %}{{ url_for('forms.list_forms_with_set', form_set_id=form.form_set_id) }}{% else %}{{ url_for('forms.list_forms') }}{% endif %}";
+          window.location.href = "{{ url_for('forms.list_forms') }}";
         }).error(function() {
           return console.log('error');
         });
